--- a/app/src/main/res/layout/item_person_list.xml
+++ b/app/src/main/res/layout/item_person_list.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardElevation="0dp"
+    android:id="@+id/card_item"
     android:background="?attr/colorOnPrimary">
     
     <androidx.constraintlayout.widget.ConstraintLayout
