Memperbarui icon nav bar menu dan memperbaiki layout profile detail

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -55,10 +55,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:textStyle="bold"
                 android:text="@string/user_name"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@+id/ci_profile_image"
                 app:layout_constraintStart_toStartOf="@+id/ci_profile_image"
                 app:layout_constraintTop_toBottomOf="@+id/ci_profile_image" />
@@ -68,7 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/grey"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_username"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="@+id/tv_profile_name"
@@ -92,9 +92,9 @@
                 android:layout_marginEnd="32dp"
                 android:clickable="true"
                 android:focusable="true"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_followers"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/v_line"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -106,7 +106,7 @@
                 android:id="@+id/tv_followers_template"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/followers_template"
                 android:textColor="@color/grey"
                 android:textSize="14sp"
@@ -121,9 +121,9 @@
                 android:layout_marginStart="32dp"
                 android:clickable="true"
                 android:focusable="true"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_following"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -135,7 +135,7 @@
                 android:id="@+id/tv_following_template"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/following_template"
                 android:textColor="@color/grey"
                 android:textSize="14sp"
@@ -170,7 +170,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:textColor="@color/grey"
                 android:text="@string/bio_template"
                 android:layout_marginStart="16dp"
@@ -181,7 +181,7 @@
                 android:id="@+id/tv_user_bio"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_bio"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_bio_icon"
@@ -219,7 +219,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:textSize="12sp"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/email_template"
                 android:textColor="@color/grey"
                 app:layout_constraintStart_toEndOf="@+id/iv_email_icon"
@@ -229,7 +229,7 @@
                 android:id="@+id/tv_user_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_email"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_email_icon"
@@ -265,7 +265,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/location_template"
                 android:textColor="@color/grey"
                 android:textSize="12sp"
@@ -276,7 +276,7 @@
                 android:id="@+id/tv_user_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_location"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_location_icon"
@@ -311,7 +311,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/company_template"
                 android:textColor="@color/grey"
                 android:textSize="12sp"
@@ -322,7 +322,7 @@
                 android:id="@+id/tv_user_company"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_organization"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_organization_icon"
@@ -355,7 +355,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:textColor="@color/grey"
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toEndOf="@id/iv_repository_icon"
@@ -366,7 +366,7 @@
                 android:id="@+id/tv_user_repository"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_repository"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@id/iv_repository_icon"
