--- a/app/src/main/res/drawable/ic_menu_home.xml
+++ b/app/src/main/res/drawable/ic_menu_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false" android:drawable="@drawable/icon_home"/>
-    <item android:state_checked="true" android:drawable="@drawable/icon_home_fill"/>
+    <item android:state_checked="false" android:drawable="@drawable/home_1_door_1_svgrepo_com"/>
+    <item android:state_checked="true" android:drawable="@drawable/home_1_door_solid_1_svgrepo_com"/>
 </selector>
