--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -56,10 +56,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:textStyle="bold"
                 android:text="@string/user_name"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@+id/ci_profile_image"
                 app:layout_constraintStart_toStartOf="@+id/ci_profile_image"
                 app:layout_constraintTop_toBottomOf="@+id/ci_profile_image" />
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/grey"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_username"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="@+id/tv_profile_name"
@@ -93,10 +93,10 @@
                 android:layout_marginEnd="32dp"
                 android:clickable="true"
                 android:focusable="true"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:textStyle="bold"
                 android:text="@string/user_followers"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toStartOf="@+id/v_line"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +106,7 @@
                 android:id="@+id/tv_followers_template"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/followers_template"
                 android:textColor="@color/grey"
                 android:textSize="14sp"
@@ -121,10 +121,10 @@
                 android:layout_marginStart="32dp"
                 android:clickable="true"
                 android:focusable="true"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:textStyle="bold"
                 android:text="@string/user_following"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/v_line"
@@ -134,7 +134,7 @@
                 android:id="@+id/tv_following_template"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/following_template"
                 android:textColor="@color/grey"
                 android:textSize="14sp"
@@ -149,7 +149,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="32dp"
-                android:background="@color/grey_2"
+                android:background="@color/grey_3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_followers_template"/>
@@ -169,7 +169,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:textColor="@color/grey"
                 android:text="@string/bio_template"
                 android:layout_marginStart="16dp"
@@ -180,7 +180,7 @@
                 android:id="@+id/tv_user_bio"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_bio"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_bio_icon"
@@ -218,7 +218,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:textSize="12sp"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/email_template"
                 android:textColor="@color/grey"
                 app:layout_constraintStart_toEndOf="@+id/iv_email_icon"
@@ -228,7 +228,7 @@
                 android:id="@+id/tv_user_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_email"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_email_icon"
@@ -264,7 +264,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/location_template"
                 android:textColor="@color/grey"
                 android:textSize="12sp"
@@ -275,7 +275,7 @@
                 android:id="@+id/tv_user_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_location"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_location_icon"
@@ -310,7 +310,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/company_template"
                 android:textColor="@color/grey"
                 android:textSize="12sp"
@@ -321,7 +321,7 @@
                 android:id="@+id/tv_user_company"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_organization"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_organization_icon"
@@ -354,7 +354,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:textColor="@color/grey"
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toEndOf="@id/iv_repository_icon"
@@ -365,7 +365,7 @@
                 android:id="@+id/tv_user_repository"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
+                android:fontFamily="@font/poppinsregular"
                 android:text="@string/user_repository"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@id/iv_repository_icon"
