--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -21,6 +21,7 @@
             android:id="@+id/toolbar_favourite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:titleCentered="true"
             android:fitsSystemWindows="true"
             android:minHeight="?attr/actionBarSize"
             app:navigationIcon="@drawable/baseline_arrow_back_24"
