Memperbarui tampilan dialog alert di settings

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,6 +20,7 @@
             android:id="@+id/toolbar_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:navigationIconTint="@color/grey"
             android:fitsSystemWindows="true"
             android:minHeight="?attr/actionBarSize"
             app:navigationIcon="@drawable/baseline_arrow_back_24"
@@ -42,7 +43,7 @@
         android:drawablePadding="16dp"
         android:fontFamily="@font/poppinsmedium"
         android:gravity="start|center_vertical|end"
-        android:text="Theme"
+        android:text="@string/theme_sample"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
