--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#767676</color>
     <color name="grey_2">#C6C6C6</color>
-    <color name="grey_3">#F0F0F0</color>
+    <color name="grey_3">#7FD6D6D6</color>
     <color name="blue">#2196F3</color>
     <color name="red">#D22B2B</color>
 </resources>
